<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/water_word"
        android:layout_width="wrap_content"
        android:layout_height="506dp"
        android:layout_centerVertical="true"
        android:text="@string/water"
        android:textColor="#000"
        android:textSize="18sp" />
    <!--decreases water count-->
    <Button
        android:id="@+id/button"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/increase"
        android:onClick="decreaseButton"/>
    <!--increases water count-->
    <Button
        android:id="@+id/button2"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/water_word"
        android:layout_toRightOf="@+id/water_word"
        android:text="@string/decrease"
        android:onClick="increaseButton"/>
    <!--displays water count-->
    <TextView
        android:id="@+id/waterValue"
        android:layout_width="58dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:ems="10"
        android:text="@string/waterValue"
        android:textColor="#000"
        android:textSize="18sp" />


</RelativeLayout>