<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context=".Quantity">
    <!--water quantity words-->
    <TextView
        android:id="@+id/water"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/howMuchWater"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/increaseWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorAccent"
        android:onClick="increaseWater"
        android:text="@string/increase"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/waterValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/waterValue" />

    <Button
        android:id="@+id/decreaseWater"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="39dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="decreaseWater"
        android:text="@string/decrease"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/waterValue"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water" />

    <TextView
        android:id="@+id/waterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waterValue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/decreaseWater"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decreaseWater" />

    <TextView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/foodRations"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/increaseWater" />

    <Button
        android:id="@+id/decreaseFoodFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="decreaseFood"
        android:text="@string/decrease"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food" />

    <Button
        android:id="@+id/increaseFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:onClick="increaseFood"
        android:text="@string/increase"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/foodValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foodValue" />

    <TextView
        android:id="@+id/foodValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodValue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/decreaseFoodFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decreaseFoodFood" />

</android.support.constraint.ConstraintLayout>